--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="projects.etrkk5.employeer">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -47,6 +50,8 @@
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".CompanyPostAdActivity" />
         <activity android:name=".CompanyMessagesActivity" />
+        <activity android:name=".ProfileActivityForEmployee" />
+        <activity android:name=".ProfileActivityForCompany"></activity>
     </application>
 
 </manifest>
