--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/employeericon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/employeericon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -51,7 +51,8 @@
         <activity android:name=".CompanyPostAdActivity" />
         <activity android:name=".CompanyMessagesActivity" />
         <activity android:name=".ProfileActivityForEmployee" />
-        <activity android:name=".ProfileActivityForCompany"></activity>
+        <activity android:name=".ProfileActivityForCompany" />
+        <activity android:name=".EmployeeGetAdActivity"></activity>
     </application>
 
 </manifest>
